service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gh-check-service
  namespace: gh-check-ns
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"gh-check-backend"}}'
spec:
  selector:
    app: gh-check-deployment
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
